--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body class="container-fluid col16">
     <div class="grid">
       <header class="site-header">
+        PAGE TITLE
       </header>
       <section class="sidebar-right">
       </section>
